--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # visit https://giscus.app to get your Giscus ids
-NEXT_PUBLIC_GISCUS_REPO="iChuck-W/giscus-component"
+NEXT_PUBLIC_GISCUS_REPO="iChuck-W/chuck-blog-functional-components_giscus-component"
 NEXT_PUBLIC_GISCUS_REPOSITORY_ID=R_kgDOM3VCLw"
-NEXT_PUBLIC_GISCUS_CATEGORY="General"
+NEXT_PUBLIC_GISCUS_CATEGORY="Announcements"
 NEXT_PUBLIC_GISCUS_CATEGORY_ID="DIC_kwDOM3VCL84CizGY"
 NEXT_PUBLIC_UTTERANCES_REPO=
 NEXT_PUBLIC_DISQUS_SHORTNAME=
